Fix gaps in forecast graph

--- a/src/template.html
+++ b/src/template.html
@@ -46,8 +46,28 @@
       <li>55</li>
     </ul>
     <div class="temp-chart">
+      <ul class="forecast outline">
+        <li style="
+        --value: 72%; --value-text: '72%';
+        --previous-value: 74%;"></li>
+        <li style="
+        --value: 62%; --value-text: '62%';
+        --previous-value: 72%;"></li>
+        <li style="
+        --value: 55%; --value-text: '55%';
+        --previous-value: 62%;"></li>
+        <li style="
+        --value: 49%; --value-text: '49%';
+        --previous-value: 55%;"></li>
+        <li style="
+        --value: 47%; --value-text: '47%';
+        --previous-value: 49%;"></li>
+        <li style="
+        --value: 55%; --value-text: '55%';
+        --previous-value: 47%;"></li>
+      </ul>
       <div>
-        <ul id="forecast">
+        <ul class="forecast">
           <li style="
           --value: 72%; --value-text: '72%';
           --previous-value: 74%;"></li>
