Add temperature labels to forecast graph

--- a/src/template.html
+++ b/src/template.html
@@ -37,7 +37,7 @@
     </div>
     <div class="visual">
     </div>
-    <div class="temp-chart">
+    <div class="hourly-forecast">
     </div>
   </div>
   </div>
