--- a/src/template.html
+++ b/src/template.html
@@ -8,38 +8,177 @@
 </head>
 
 <body>
-  <div class="primary card">
-    <div class="location">
-      <img class="icon" src="./icons/map-marker.svg" alt="map icon" height="32" width="32">
-      <h3>College Station, Texas</h3>
-    </div>
-    <h4 class="day-time">Saturday 2:25 PM</h4>
-    <div class="alerts">
-      <img class="icon" src="./icons/alert.svg" alt="alert icon" height="32" width="32">
-      <p>Wind Advisory</p>
-      <p class="seperator">|</p>
-      <p>Red Flag Warning</p>
-    </div>
-    <h1 class="current-temp">77<span class="degree-symbol">&deg;F</span></h1>
-    <div class="conditions inline-card">
-      <div class="wind">
-        <img class="icon" src="./icons/arrow.svg" alt="wind arrow icon" height="32" width="32">
-        <p>5 mph</p>
+  <div class="card-container flex-column">
+    <div class="card card-label top-label flex">
+      <div class="location flex">
+        <img class="icon" src="./icons/map-marker.svg" alt="map icon" height="32" width="32">
+        <h3 class="location-text">College Station, Texas</h3>
       </div>
-      <div class="precip">
-        <img class="icon" src="./icons/water.svg" alt="water drop icon" height="32" width="32">
-        <p>0%</p>
+
+      <h4 class="day-time">Saturday 2:25 PM</h4>
+    </div>
+
+    <div class="card card-label">
+      <h3>Current Conditions</h3>
+    </div>
+    <div class="primary card">
+
+      <div class="primary-alert">
+        <h2 class="alert-text">Red Flag (Fire Weather) Warning</h2>
       </div>
-      <div class="humidity">
-        <img class="icon" src="./icons/cloud-percent.svg" alt="humidity icon" height="32" width="32">
-        <p>25%</p>
+
+      <div class="primary-left flex-column">
+        <div class="description">
+          <h2>Sunny</h2>
+        </div>
+        <div class="visual-temp flex">
+          <div class="visual">
+          </div>
+          <h1 class="current-temp">77<span class="degree-symbol">&deg;F</span></h1>
+        </div>
+        <h3>Feels like <span class="feels-like-value">77</span></h3>
+        <h3>High: <span class="today-high-value">80</span> Low: <span class="today-low-value">60</span></h3>
+      </div>
+      <div class="primary-right flex-column">
+        <table class="conditions-table">
+          <tr>
+            <td>Precipitation</td>
+            <td class="precipitation-value right">0%</td>
+          </tr>
+          <tr>
+            <td>Humidity</td>
+            <td class="humidity-value right">25%</td>
+          </tr>
+          <tr>
+            <td>Wind</td>
+            <td class="wind-value right">5 mph</td>
+          </tr>
+          <tr>
+            <td>Visibility</td>
+            <td class="visibility-value right">10 mi</td>
+          </tr>
+          <tr>
+            <td>UV Index</td>
+            <td class="uv-value right">3 of 11</td>
+          </tr>
+        </table>
+
       </div>
     </div>
-    <div class="visual">
+
+    <div class="card card-label hourly-forecast-label flex">
+      <h3>Hourly Forecast</h3>
+      <div class="forecast-buttons flex">
+        <button class="temp-button active">Temperature</button>
+        <span class="separator"></span>
+        <button class="precip-button">Precipitation</button>
+      </div>
     </div>
-    <div class="hourly-forecast">
+    <div class="forecast-container card">
+      <div class="hourly-forecast">
+      </div>
+      <div class="time-labels flex">
+        <h4>3 PM</h4>
+        <h4>6 PM</h4>
+        <h4>9 PM</h4>
+        <h4>12 AM</h4>
+        <h4>3 AM</h4>
+        <h4>6 AM</h4>
+        <h4>9 AM</h4>
+        <h4>12 AM</h4>
+      </div>
     </div>
-  </div>
+
+
+
+    <div class="card card-label">
+      <h3>7 Day Forecast</h3>
+    </div>
+    <div class="forecast flex-column">
+      <div class="forecast-labels flex">
+        <div class="card card-label">
+          <h3 class="day-label day-1">MON</h3>
+        </div>
+        <div class="card card-label">
+          <h3 class="day-label day-2">TUE</h3>
+        </div>
+        <div class="card card-label">
+          <h3 class="day-label day-3">WED</h3>
+        </div>
+        <div class="card card-label">
+          <h3 class="day-label day-4">THU</h3>
+        </div>
+        <div class="card card-label">
+          <h3 class="day-label day-5">FRI</h3>
+        </div>
+        <div class="card card-label">
+          <h3 class="day-label day-6">SAT</h3>
+        </div>
+        <div class="card card-label">
+          <h3 class="day-label day-7">SUN</h3>
+        </div>
+      </div>
+      <div class="forecast-descriptions flex">
+        <div class="card" class="day-1">
+          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <h3 class="description">Sunny</h3>
+        </div>
+        <div class="card day-2">
+          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <h3 class="description">Sunny</h3>
+        </div>
+        <div class="card day-3">
+          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <h3 class="description">Sunny</h3>
+        </div>
+        <div class="card day-4">
+          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <h3 class="description">Sunny</h3>
+        </div>
+        <div class="card day-5">
+          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <h3 class="description">Sunny</h3>
+        </div>
+        <div class="card day-6">
+          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <h3 class="description">Sunny</h3>
+        </div>
+        <div class="card day-7">
+          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <h3 class="description">Sunny</h3>
+        </div>
+      </div>
+      <div class="forecast-temps flex">
+        <div class="card">
+          <h3 class="forecast-high">78</h3>
+          <h3 class="forecast-low">69</h3>
+        </div>
+        <div class="card">
+          <h3 class="forecast-high">78</h3>
+          <h3 class="forecast-low">69</h3>
+        </div>
+        <div class="card">
+          <h3 class="forecast-high">78</h3>
+          <h3 class="forecast-low">69</h3>
+        </div>
+        <div class="card">
+          <h3 class="forecast-high">78</h3>
+          <h3 class="forecast-low">69</h3>
+        </div>
+        <div class="card">
+          <h3 class="forecast-high">78</h3>
+          <h3 class="forecast-low">69</h3>
+        </div>
+        <div class="card">
+          <h3 class="forecast-high">78</h3>
+          <h3 class="forecast-low">69</h3>
+        </div>
+        <div class="card">
+          <h3 class="forecast-high">78</h3>
+          <h3 class="forecast-low">69</h3>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
