--- a/src/template.html
+++ b/src/template.html
@@ -44,7 +44,7 @@
 
       <div class="primary-left flex-column">
         <div class="description">
-          <h2>Sunny</h2>
+          <h2 class="description-text">Sunny</h2>
         </div>
         <div class="visual-temp flex">
           <div class="visual">
@@ -134,32 +134,32 @@
         </div>
       </div>
       <div class="forecast-descriptions flex">
-        <div class="card" class="day-1">
-          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+        <div class="card day-1">
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
         <div class="card day-2">
-          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
         <div class="card day-3">
-          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
         <div class="card day-4">
-          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
         <div class="card day-5">
-          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
         <div class="card day-6">
-          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
         <div class="card day-7">
-          <img class="icon" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
       </div>
