Link API results to display-controller

--- a/src/template.html
+++ b/src/template.html
@@ -48,6 +48,7 @@
         </div>
         <div class="visual-temp flex">
           <div class="visual">
+            <img src="./weather-icons/clear-day.svg" alt="" width="80" height="80">
           </div>
           <h1 class="current-temp">77<span class="degree-symbol">&deg;F</span></h1>
         </div>
