Initial graph functionality

--- a/src/template.html
+++ b/src/template.html
@@ -135,31 +135,31 @@
         </div>
       </div>
       <div class="forecast-descriptions flex">
-        <div class="card day-1">
+        <div class="card day-1 forecast-visual-container flex-column">
           <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
-        <div class="card day-2">
+        <div class="card day-2 forecast-visual-container flex-column">
           <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
-        <div class="card day-3">
+        <div class="card day-3 forecast-visual-container flex-column">
           <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
-        <div class="card day-4">
+        <div class="card day-4 forecast-visual-container flex-column">
           <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
-        <div class="card day-5">
+        <div class="card day-5 forecast-visual-container flex-column">
           <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
-        <div class="card day-6">
+        <div class="card day-6 forecast-visual-container flex-column">
           <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
-        <div class="card day-7">
+        <div class="card day-7 forecast-visual-container flex-column">
           <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
           <h3 class="description">Sunny</h3>
         </div>
