--- a/src/template.html
+++ b/src/template.html
@@ -23,18 +23,23 @@
         <button class="location-search-button">Go</button>
         <div class="location flex">
           <img class="icon" src="./icons/map-marker.svg" alt="map icon" height="32" width="32">
-          <h3 class="location-text">College Station, Texas</h3>
+          <h3 class="location-text"></h3>
         </div>
       </div>
 
       <h4 class="day-time">
-        <p class="date">Saturday, March 18</p>
-        <p class="time">2:25 PM</p>
+        <p class="date"></p>
+        <p class="time"></p>
       </h4>
     </div>
 
-    <div class="card card-label">
+    <div class="card current-conditions card-label flex">
       <h3>Current Conditions</h3>
+      <div class="unit-buttons flex">
+        <button class="temp-button fahrenheit active">F</button>
+        <span class="separator"></span>
+        <button class="temp-button celsius">C</button>
+      </div>
     </div>
     <div class="primary card">
 
@@ -50,32 +55,32 @@
           <div class="visual">
             <img src="./weather-icons/clear-day.svg" alt="" width="80" height="80">
           </div>
-          <h1 class="current-temp">77<span class="degree-symbol">&deg;F</span></h1>
+          <h1 class="current-temp">00</h1>
         </div>
-        <h3>Feels like <span class="feels-like-value">77</span></h3>
-        <h3>High: <span class="today-high-value">80</span> Low: <span class="today-low-value">60</span></h3>
+        <h3>Feels like <span class="feels-like-value">00</span></h3>
+        <h3>High: <span class="today-high-value">00</span> Low: <span class="today-low-value">00</span></h3>
       </div>
       <div class="primary-right flex-column">
         <table class="conditions-table">
           <tr>
             <td>Precipitation</td>
-            <td class="precipitation-value right">0%</td>
+            <td class="precipitation-value right">00%</td>
           </tr>
           <tr>
             <td>Humidity</td>
-            <td class="humidity-value right">25%</td>
+            <td class="humidity-value right">00%</td>
           </tr>
           <tr>
             <td>Wind</td>
-            <td class="wind-value right">5 mph</td>
+            <td class="wind-value right">00 mph</td>
           </tr>
           <tr>
             <td>Visibility</td>
-            <td class="visibility-value right">10 mi</td>
+            <td class="visibility-value right">00 mi</td>
           </tr>
           <tr>
             <td>UV Index</td>
-            <td class="uv-value right">3 of 11</td>
+            <td class="uv-value right">00 of 11</td>
           </tr>
         </table>
 
@@ -105,85 +110,85 @@
     <div class="forecast flex-column">
       <div class="forecast-labels flex">
         <div class="card card-label">
-          <h3 class="day-label day-1">MON</h3>
+          <h3 class="day-label day-1">---</h3>
         </div>
         <div class="card card-label">
-          <h3 class="day-label day-2">TUE</h3>
+          <h3 class="day-label day-2">---</h3>
         </div>
         <div class="card card-label">
-          <h3 class="day-label day-3">WED</h3>
+          <h3 class="day-label day-3">---</h3>
         </div>
         <div class="card card-label">
-          <h3 class="day-label day-4">THU</h3>
+          <h3 class="day-label day-4">---</h3>
         </div>
         <div class="card card-label">
-          <h3 class="day-label day-5">FRI</h3>
+          <h3 class="day-label day-5">---</h3>
         </div>
         <div class="card card-label">
-          <h3 class="day-label day-6">SAT</h3>
+          <h3 class="day-label day-6">---</h3>
         </div>
         <div class="card card-label">
-          <h3 class="day-label day-7">SUN</h3>
+          <h3 class="day-label day-7">---</h3>
         </div>
       </div>
       <div class="forecast-descriptions flex">
         <div class="card day-1 forecast-visual-container flex-column">
-          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
-          <h3 class="description">Sunny</h3>
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="64">
+          <h3 class="description"></h3>
         </div>
         <div class="card day-2 forecast-visual-container flex-column">
-          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
-          <h3 class="description">Sunny</h3>
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="64">
+          <h3 class="description"></h3>
         </div>
         <div class="card day-3 forecast-visual-container flex-column">
-          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
-          <h3 class="description">Sunny</h3>
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="64">
+          <h3 class="description"></h3>
         </div>
         <div class="card day-4 forecast-visual-container flex-column">
-          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
-          <h3 class="description">Sunny</h3>
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="64">
+          <h3 class="description"></h3>
         </div>
         <div class="card day-5 forecast-visual-container flex-column">
-          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
-          <h3 class="description">Sunny</h3>
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="64">
+          <h3 class="description"></h3>
         </div>
         <div class="card day-6 forecast-visual-container flex-column">
-          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
-          <h3 class="description">Sunny</h3>
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="64">
+          <h3 class="description"></h3>
         </div>
         <div class="card day-7 forecast-visual-container flex-column">
-          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="">
-          <h3 class="description">Sunny</h3>
+          <img class="icon forecast-visual" src="./weather-icons/clear-day.svg" alt="" width="64" height="64">
+          <h3 class="description"></h3>
         </div>
       </div>
       <div class="forecast-temps flex">
         <div class="card">
-          <h3 class="forecast-high">78</h3>
-          <h3 class="forecast-low">69</h3>
+          <h3 class="forecast-high">00</h3>
+          <h3 class="forecast-low">00</h3>
         </div>
         <div class="card">
-          <h3 class="forecast-high">78</h3>
-          <h3 class="forecast-low">69</h3>
+          <h3 class="forecast-high">00</h3>
+          <h3 class="forecast-low">00</h3>
         </div>
         <div class="card">
-          <h3 class="forecast-high">78</h3>
-          <h3 class="forecast-low">69</h3>
+          <h3 class="forecast-high">00</h3>
+          <h3 class="forecast-low">00</h3>
         </div>
         <div class="card">
-          <h3 class="forecast-high">78</h3>
-          <h3 class="forecast-low">69</h3>
+          <h3 class="forecast-high">00</h3>
+          <h3 class="forecast-low">00</h3>
         </div>
         <div class="card">
-          <h3 class="forecast-high">78</h3>
-          <h3 class="forecast-low">69</h3>
+          <h3 class="forecast-high">00</h3>
+          <h3 class="forecast-low">00</h3>
         </div>
         <div class="card">
-          <h3 class="forecast-high">78</h3>
-          <h3 class="forecast-low">69</h3>
+          <h3 class="forecast-high">00</h3>
+          <h3 class="forecast-low">00</h3>
         </div>
         <div class="card">
-          <h3 class="forecast-high">78</h3>
-          <h3 class="forecast-low">69</h3>
+          <h3 class="forecast-high">00</h3>
+          <h3 class="forecast-low">00</h3>
         </div>
       </div>
     </div>
