Add precipitation option for graphical forecast

--- a/src/template.html
+++ b/src/template.html
@@ -90,9 +90,9 @@
     <div class="card card-label hourly-forecast-label flex">
       <h3>Hourly Forecast</h3>
       <div class="forecast-buttons flex">
-        <button class="temp-button active">Temperature</button>
+        <button class="temp-button chart active">Temperature</button>
         <span class="separator"></span>
-        <button class="precip-button">Precipitation</button>
+        <button class="precip-button chart ">Precipitation</button>
       </div>
     </div>
     <div class="forecast-container card">
