Replace placeholder data with API functionality

--- a/src/template.html
+++ b/src/template.html
@@ -22,7 +22,7 @@
         <input type="text" id="location-search" name="location-search" placeholder="City, Zip Code, or Address">
         <button class="location-search-button">Go</button>
         <div class="location flex">
-          <img class="icon" src="./icons/map-marker.svg" alt="map icon" height="32" width="32">
+          <img src="./icons/map-marker.svg" alt="map icon" height="32" width="32">
           <h3 class="location-text"></h3>
         </div>
       </div>
