Fix conditions status not updating

--- a/src/template.html
+++ b/src/template.html
@@ -49,7 +49,7 @@
 
       <div class="primary-left flex-column">
         <div class="description">
-          <h2 class="description-text">Sunny</h2>
+          <h2 class="description-text"></h2>
         </div>
         <div class="visual-temp flex">
           <div class="visual">
