--- a/src/template.html
+++ b/src/template.html
@@ -44,7 +44,7 @@
     <div class="primary card">
 
       <div class="primary-alert">
-        <h2 class="alert-text">Red Flag (Fire Weather) Warning</h2>
+        <h2 class="alert-text"></h2>
       </div>
 
       <div class="primary-left flex-column">
