--- a/src/template.html
+++ b/src/template.html
@@ -18,9 +18,11 @@
         </div>
       </div>
       <div class="location-input">
-        <label for="location-search">City, Zip Code, or Address</label>
-        <input type="text" id="location-search" name="location-search" placeholder="City, Zip Code, or Address">
-        <button class="location-search-button">Go</button>
+        <form class="flex" method="dialog">
+          <label for="location-search">City, Zip Code, or Address</label>
+          <input type="text" id="location-search" name="location-search" placeholder="City, Zip Code, or Address">
+          <button type="submit" class="location-search-button">Go</button>
+        </form>
         <div class="location flex">
           <img src="./icons/map-marker.svg" alt="map icon" height="32" width="32">
           <h3 class="location-text"></h3>
